--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,15 +39,15 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 四設計二甲 曾民凱 個人簡報
 
-### KMOLab
+### 40623123
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+ [GIT倉儲](https://github.com/s40623123/cad2019)
 </small>
 
-[CMSimfly 網誌](./../blog/index.html)
+[40623123網站](https://s40623123.github.io/cad2019/content/index.html)
 
 
     </script>
@@ -72,6 +72,20 @@ Created by [KMOLab](http://lab.kmol.info/)
 
 						
 <section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+# solvespace
+
+<small>
+ [對應網站](https://s40623123.github.io/cad2019/content/SOL.html)
+</small>
+    </script>
+</section>
+
+
+
+						
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
